2008-09-11       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2.texi:  added more information to the
	  release map.
	* gm2/gm2-libs-iso/TextIO.mod:  new file.
	* gm2/gm2-libs-iso/STextIO.mod:  new file.
	* gm2/gm2-libs-iso/StdChans.mod:  new file.
	* testsuite/gm2/isolib/run/pass/hello.mod:  new file.
	* testsuite/gm2/isolib/run/pass/gm2.exp:  new file.
	* gm2/gm2-compiler/M2ALU.mod:  fixed bug in
          CollectConstructorDependants in which a unknown
	  value might be saved as a constant.

2008-09-10       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2.texi:  modified many examples to reflect
	  optional return value for printf.   Also updated
	  the swig examples to use -c++.
        * gm2/Make-lang.in:  added entries for IOChan.mod,
	  RTio.mod and ErrnoCategory.c.  Also added rule
	  to build ErrnoCategory.o.
        * gm2/bnf/gm2m.bnf:  moved FIO import list before
	  M2LexBuf to avoid getting the wrong definition of
	  GetFileName during p2c bootstrap phase.
        * gm2/bnf/m2-2.bnf:  added OptReturnType for
	  procedures (functions).  Rationalized function
	  return values via OptReturnType.
        * gm2/bnf/m2-3.bnf:  added OptReturnType for
	  procedures (functions).  Rationalized function
	  return values via OptReturnType.  Also added
	  productions to implement functions using
	  an optional return type.
        * gm2/bnf/m2-h.bnf:  added OptReturnType for
	  procedures (functions).  Rationalized function
	  return values via OptReturnType.
        * gm2/bnf/m2.bnf:  added OptReturnType for
	  procedures (functions).  Rationalized function
	  return values via OptReturnType.
        * gm2/examples/server/server.mod:  modified code
	  to exploit calling printf and ignoring its return
	  value.
        * gm2/examples/swig/exceptions/tiny.mod:  ignore
	  return result for printf.
        * gm2/gm2-compiler/M2Quads.def:  define
	  CheckBuildFunction.
        * gm2/gm2-compiler/M2Quads.mod:  implement
	  CheckBuildFunction.