@@ -4,7 +4,7 @@
 
    Copyright ISO/IEC (International Organization for Standardization
    and International Electrotechnical Commission) 1996, 1997, 1998,
-   1999, 2000, 2001, 2002, 2003, 2004, 2005, 2006 *)
+   1999, 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008 *)
 
 DEFINITION MODULE IOChan;
 
@@ -172,4 +172,3 @@ PROCEDURE DeviceError (cid: ChanId): DeviceErrNum;
   *)
 
 END IOChan.
-
