@@ -5,25 +5,36 @@
 @c any later version published by the Free Software Foundation.
 
 This directory contains the ISO definition modules and some
-corresponding implementation modules. All definition files except
-@file{M2RTS.def} were defined by the International Standard
-Information technology - programming languages BS ISO/IEC
-10514-1:1996E Part 1: Modula-2, Base Language.  The Copyright to the
-definition files (except M2RTS.def) belong to ISO/IEC (International
-Organization for Standardization and International Electrotechnical
-Commission).  However the implementation modules and M2RTS.def are
-Copyright of the FSF and are held under the LGPL.
+corresponding implementation modules.  All definition files except
+@file{M2RTS.def}, @file{RTio.def} and @file{ErrnoCategory.def} were
+defined by the International Standard Information technology -
+programming languages BS ISO/IEC 10514-1:1996E Part 1: Modula-2, Base
+Language.  The Copyright to the definition files (except
+@file{M2RTS.def}, @file{RTio.def} and @file{ErrnoCategory.def}) belong
+to ISO/IEC (International Organization for Standardization and
+International Electrotechnical Commission).  All implementation
+modules and @file{M2RTS.def}, @file{RTio.def},
+@file{ErrnoCategory.def} are Copyright of the FSF and are held under
+the LGPL.
 
 The definition modules are allowed to be distributed together with
 the compiler.
-
-Currently this is work in progress and the code is incomplete and
-probably highly buggy.
 
 The following implementation modules are complete:
 @code{ChanConsts}
 @code{CharClass}
 @code{ConvTypes}
+@code{EXCEPTIONS}
+@code{IOChan}
+@code{IOConsts}
+@code{M2EXCEPTION}
+@code{M2RTS}
+@code{RTio}
+@code{StdChans}
+@code{STextIO}
+@code{Storage}
 @code{Strings}
-@code{TERMINATION} and
+@code{SYSTEM}
+@code{TERMINATION}
+@code{TextIO} and
 @code{M2RTS}.
