@@ -4,7 +4,7 @@
 
    Copyright ISO/IEC (International Organization for Standardization
    and International Electrotechnical Commission) 1996, 1997, 1998,
-   1999, 2000, 2001, 2002, 2003, 2004, 2005, 2006 *)
+   1999, 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008 *)
 
 DEFINITION MODULE SeqFile;
 
@@ -20,35 +20,48 @@ TYPE
   (* Accepted singleton values of FlagSet *)
 
 CONST
-  read = FlagSet{ChanConsts.readFlag};   (* input operations are requested/available *)
-  write = FlagSet{ChanConsts.writeFlag}; (* output operations are requested/available *)
-  old = FlagSet{ChanConsts.oldFlag};     (* a file may/must/did exist before the channel is
-                                            opened *)
-  text = FlagSet{ChanConsts.textFlag};   (* text operations are requested/available *)
-  raw = FlagSet{ChanConsts.rawFlag};     (* raw operations are requested/available *)
+  (* input operations are requested/available *)
+  read = FlagSet{ChanConsts.readFlag};
 
-PROCEDURE OpenWrite (VAR cid: ChanId; name: ARRAY OF CHAR; flags: FlagSet;
-                     VAR res: OpenResults);
-  (* Attempts to obtain and open a channel connected to a stored rewindable file of the
-     given name.
-     The write flag is implied; without the raw flag, text is implied.
-     If successful, assigns to cid the identity of the opened channel, assigns the value
-     opened to res, and selects output mode, with the write position at the start of the
-     file (i.e. the file is of zero length).
-     If a channel cannot be opened as required, the value of res indicates the reason, and
-     cid identifies the invalid channel.
+  (* output operations are requested/available *)
+  write = FlagSet{ChanConsts.writeFlag};
+
+  (* a file may/must/did exist before the channel is opened *)
+  old = FlagSet{ChanConsts.oldFlag};
+
+  (* text operations are requested/available *)
+  text = FlagSet{ChanConsts.textFlag};
+
+  (* raw operations are requested/available *)
+  raw = FlagSet{ChanConsts.rawFlag};
+
+PROCEDURE OpenWrite (VAR cid: ChanId; name: ARRAY OF CHAR;
+                     flags: FlagSet; VAR res: OpenResults);
+  (*
+     Attempts to obtain and open a channel connected to a stored
+     rewindable file of the given name.
+     The write flag is implied; without the raw flag, text is
+     implied.  If successful, assigns to cid the identity of
+     the opened channel, assigns the value opened to res, and
+     selects output mode, with the write position at the start
+     of the file (i.e. the file is of zero length).
+     If a channel cannot be opened as required, the value of
+     res indicates the reason, and cid identifies the invalid
+     channel.
   *)
 
-PROCEDURE OpenAppend (VAR cid: ChanId; name: ARRAY OF CHAR; flags: FlagSet;
-                      VAR res: OpenResults);
-  (* Attempts to obtain and open a channel connected to a stored rewindable file of the
-     given name.
-     The write and old flags are implied; without the raw flag, text is implied.
-     If successful, assigns to cid the identity of the opened channel, assigns the value
-     opened to res, and selects output mode, with the write position corresponding to the
-     length of the file.
-     If a channel cannot be opened as required, the value of res indicates the reason, and
-     cid identifies the invalid channel.
+PROCEDURE OpenAppend (VAR cid: ChanId; name: ARRAY OF CHAR;
+                      flags: FlagSet; VAR res: OpenResults);
+  (*
+     Attempts to obtain and open a channel connected to a stored
+     rewindable file of the given name.  The write and old flags
+     are implied; without the raw flag, text is implied.  If
+     successful, assigns to cid the identity of the opened channel,
+     assigns the value opened to res, and selects output mode,
+     with the write position corresponding to the length of the
+     file.  If a channel cannot be opened as required, the value
+     of res indicates the reason, and cid identifies the invalid
+     channel.
   *)
 
 PROCEDURE OpenRead (VAR cid: ChanId; name: ARRAY OF CHAR; flags: FlagSet;
